fixes description spacing

--- a/style.css
+++ b/style.css
@@ -15,8 +15,11 @@ body {
     grid-template-rows: .5fr 2fr 1fr;
     margin: 10px;
     padding: 40px;
+    justify-items: center;
 }
-
+.board {
+    width : 40em;
+}
 .gameContainer {
     margin: 10px;
     height: 40em;
@@ -25,8 +28,12 @@ body {
     background-color: grey;
     grid-column: 2 / 3;
     grid-row: 2 / 3;
-    
 }
+
+p {
+    margin-bottom: 2rem;
+}
+
 
 canvas {
     background-color: rgb(24, 146, 24);
@@ -44,14 +51,15 @@ canvas {
     grid-row: 1 / 2;
     align-items: end;
     color: white;
-    font-size: 150%;
+    font-size: 120%;
+    font-family: 'Press Start 2P', monospace;
 }
 .score {
     padding-left: 20px;
 }
-.highscore {
+/* .highscore {
     padding-right: 60px;
-}
+} */
 
 .gameover {
     grid-column: 2 / 3;
@@ -86,13 +94,15 @@ canvas {
     font-size: 150%;
 }
 button {
-    width: 110px;
-    height: 50px;
+    font-family: 'Press Start 2P', monospace;
+    width: 190px;
+    height: 60px;
     border-radius: 10%;
-    font-size: 20px;
+    font-size: 21px;
     grid-column: 2 / 3;
     grid-row: 3 / 4;
     justify-self: center;
+    margin-top: 5%;
 }
 
 button:hover {
